--- a/src/app/not-found-ready.module.css
+++ b/src/app/not-found-ready.module.css
@@ -17,5 +17,6 @@
 }
 
 .link {
-  color: var(--color-electric-aqua);
+  color: var(--color-sunset-orange);
+  font-weight: 700;
 }
