--- a/src/components/organisms/blog/blog.module.css
+++ b/src/components/organisms/blog/blog.module.css
@@ -4,8 +4,6 @@
   align-items: center;
   padding: 0 3rem 2rem;
   gap: 2rem;
-  background: radial-gradient(ellipse at 50% 110%, var(--color-electric-aqua) 0%, var(--color-black) 70%);
-
 }
 
 .intro {
